Final MLOps Dashboards & Deployment readiness. Includes Dashboard UI, Inference API, monitoring scripts, and trained model artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__/
 data/raw/
 data/processed/
 
-# Models (Can be re-trained)
-models/
+# Models (Keep for deployment)
+# models/
 
 # VS Code
 .vscode/
